--- a/src/bot.css
+++ b/src/bot.css
@@ -29,7 +29,58 @@
 	width: inherit;
 	height: 500rem;
 }
+.bot-ui-right {
+	position:fixed; 
+	right: 5px;
+	bottom: 5px;
+	width: 500px;
+	height: 600px;
+	border: 1px solid rgb(74, 74, 74);
+	z-index:999;
+	background: #fbfbfbfa;
+}
+#root div.chatbox-ui {
+	position: absolute;
+    left: 0;
+    transform: none;
+	bottom: 20px;
+	width: 100%;
+    max-width: 550px;
+}
+.chatbox-input {
+	width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid;
+    margin-right: 1px;
+    padding-right: 30px;
+}
+.bot-input-right {
+	/* overflow:auto; */
+	z-index:9999;
+	height: inherit;
+	width: inherit;
+}
+.close-chat {
+	/* background-color: #8f8e8e; */
+	width: 30px;
+    height: 30px;
+	border-radius: 50%;
+	padding: 4px;
+	text-align: center;
+    margin-left: auto;
+
+   
+}
+.divider {
+	border-top: 1px solid #bbb;
+}
 
 @media (max-width: 568px){
 	.bot-button { height: 12vw; width: 12vw;}
+	.bot-ui-right {
+		width: inherit;
+    	padding-inline: 10px;
+		right: 0px;
+	}
 }
